Add favicon and web app manifest; include TLD Challenges brand favicon and configure manifest for improved PWA support.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- TLD Challenges brand favicon - scales perfectly at any size -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- Web app manifest -->
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TLD Challenges</title>
     <meta name="description" content="The Long Dark challenge platform - Submit runs, compete in tournaments, and track your survival skills." />
